Docker: better, not great, Nexus image (unused)