@@ -4,13 +4,15 @@
 -XX:+UnlockDiagnosticVMOptions
 -XX:+UnsyncloadClass
 -XX:+LogVMOutput
--XX:LogFile=G:/nexus3/log/jvm.log
+-XX:LogFile=../sonatype-work/nexus3/log/jvm.log
 -XX:-OmitStackTraceInFastThrow
 -Djava.net.preferIPv4Stack=true
 -Dkaraf.home=.
 -Dkaraf.base=.
 -Dkaraf.etc=etc/karaf
 -Djava.util.logging.config.file=etc/karaf/java.util.logging.properties
--Dkaraf.data=G:/nexus3
--Djava.io.tmpdir=G:/nexus3/tmp
+-Dkaraf.data=../sonatype-work/nexus3
+-Dkaraf.log=../sonatype-work/nexus3/log
+-Djava.io.tmpdir=../sonatype-work/nexus3/tmp
 -Dkaraf.startLocalConsole=false
+-Djava.endorsed.dirs=lib/endorsed
